--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,7 @@
 html {
   scroll-behavior: smooth;
   scroll-padding-top: 90px;
+  overflow-x: clip;
 }
 
 body {
